--- a/001/index.html
+++ b/001/index.html
@@ -15,6 +15,7 @@
             </nav>
         </header>
         <section class="signupForm">
+            <h1>Sign up</h1>
             <form>
                 <div class="formField">
                     <label for="email">e-mail</label>
